--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -1,27 +1,36 @@
-name: Test Find Lowest Number
+name: Python Application Test
 
-on:
-  push: 
-    branches: [ main ]  # You might adjust the branch name 
+on: [push]
 
 jobs:
-  test-find-lowest-number:
+  test-application:
+    name: Run Application Tests
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3  # Checkout the repository code
+    - uses: actions/checkout@v2
 
-      - name: Test with multiple numbers
-        run: |
-          python3 find_lowest_number.py test_data/test1_input.txt output.txt
-          diff output.txt test_data/test1_expected.txt || echo "::error file=test_workflow.yml,line=0,col=0::Test 1 failed"
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
 
-      - name: Test with single number
-        run: |
-          python3 find_lowest_number.py test_data/test2_input.txt output.txt
-          diff output.txt test_data/test2_expected.txt || echo "::error file=test_workflow.yml,line=0,col=0::Test 2 failed"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        # Add any other dependencies here
 
-      - name: Test with blank input
-        run: |
-          python3 find_lowest_number.py test_data/test3_input.txt output.txt
-          diff output.txt test_data/test3_expected.txt || echo "::error file=test_workflow.yml,line=0,col=0::Test 3 failed"
+    - name: Test with 10 numbers
+      run: |
+        python find_lowest_number.py test_data/test1_input.txt test1_output.txt
+        diff test1_output.txt test_data/test1_expected.txt
+
+    - name: Test with 1 number
+      run: |
+        python find_lowest_number.py test_data/test2_input.txt test2_output.txt
+        diff test2_output.txt test_data/test2_expected.txt
+
+    - name: Test blank file
+      run: |
+        python find_lowest_number.py test_data/test3_input.txt test3_output.txt
+        diff test3_output.txt test_data/test3_expected.txt
